--- a/client/package.json
+++ b/client/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "Pics.io",
+  "name": "Reenbit-Trainee-Camp",
   "version": "0.1.0",
   "private": true,
   "main": "index.js",
   "proxy": "http://localhost:3030",
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
+    "@reduxjs/toolkit": "^2.4.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "ajv-keywords": "^5.1.0",
     "axios": "^0.21.4",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.3",
-    "react-router-dom": "^5.3.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-redux": "^7.2.9",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
-    "redux": "^4.0.5",
+    "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
+    "redux-thunk": "^2.4.2",
     "uuidv4": "^6.2.13",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.2",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,11 +52,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.3.8",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "ajv": "^7.2.4",
-    "concurrently": "^6.2.0",
-    "nodemon": "^2.0.7"
+    "concurrently": "^6.5.1",
+    "nodemon": "^2.0.22"
   }
 }
