--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Pics.io",
+  "name": "Reenbit-Trainee-Camp",
   "version": "1.0.0",
   "private": true,
   "description": "testing",
@@ -19,12 +19,23 @@
   "license": "UNLICENSED",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "logger": "^0.0.1",
     "mongodb": "^3.6.9",
-    "mongoose": "^5.12.11",
+    "mongoose": "^5.13.22",
+    "mongoose-type-email": "^1.1.2",
+    "mongoose-type-url": "^2.1.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "notiflix": "^3.2.7",
     "uuid4": "^2.0.3",
     "uuidv4": "^6.2.13"
   },
